--- a/client/public/index.html
+++ b/client/public/index.html
@@ -23,7 +23,13 @@
       Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
+
+
     -->
+    <!-- First load Google Maps library -->
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAhgPS9xVvesdLc8ETGdv8u31VpKZZDCmA&libraries=places"></script>
+    <!-- Then load your bundle file -->
+<!--    <script src="bundle.js"></script>-->
     <title>React App</title>
   </head>
   <body>
