--- a/client/public/index.html
+++ b/client/public/index.html
@@ -27,14 +27,9 @@
     <title>JJFresh</title>
   </head>
   <body>
+    <link rel="stylesheet" type="text/css" href="/index.css">
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root" style="background-image: url('fruit.jpg');background-size: 100em;min-height: 100vw;
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    position: relative;
-    align-items: center;"></div>
+    <div id="root"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
